--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "cross-env MODE=development webpack --config webpack.config.js"
+    "build:prod": "cross-env mode=production webpack --config webpack.config.js",
+    "build:dev": "cross-env mode=development webpack --config webpack.config.js"
   },
   "devDependencies": {
     "@hot-loader/react-dom": "^17.0.2",
     "@types/jest": "^27.4.1",
+    "@types/react": "^18.0.5",
+    "@types/react-dom": "^18.0.0",
     "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
+    "dotenv": "^16.0.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.1",
     "node-sass": "^7.0.1",
